--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@
 
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Font awesome Link -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+
+
 <link rel="icon" href="./images/logo.png">
   <title>Mini News</title>
 </head>
@@ -88,20 +93,7 @@
       with speed, accuracy, and simplicity.
     </p>
 
-    <!-- Buttons -->
-    <div class="mt-8 flex justify-center gap-4">
-      <a href="#"
-         class="px-6 py-3 rounded-md bg-blue-600 text-white font-semibold
-                hover:bg-blue-700 transition">
-        Get Started
-      </a>
-
-      <a href="#"
-         class="px-6 py-3 rounded-md border border-white text-white font-semibold
-                hover:bg-white hover:text-black transition">
-        Explore News
-      </a>
-    </div>
+   
   </div>
 
 </section>
@@ -109,7 +101,22 @@
 
 
 
+<!-- 
 
+about us - 
+
+1. IMAGE SECTION - right side , leftside matter 
+
+2. CARDS - categories of news [sports , college, politics, world , technology , Business ]
+    logo --- heading 
+    matter (3,4 lines) hover cards ki shadow color 6 cards 
+
+
+
+fo
+
+
+-->
 
 
 
